# Ts22-Admin

./: .gitattributes  CMakeLists.txt  README.md  package.ini
src/: plugin.cpp  plugin.h
